fix: 마이프로필 피드 공개 여부 예외 처리